--- a/appSettings.json
+++ b/appSettings.json
@@ -1,6 +1,6 @@
 {
   "url": "https://transportal-qa.azurewebsites.net/#!/login",
-  "expectedTitle": "Trans-Portal",
+  "expectedTitle": "Trans-Porta",
   "inValiduserNameOne": "test",
   "inValidPasswordOne": "test",
   "inValidPasswordTwo": "test1234",
