--- a/SeleniumCsharp.csproj
+++ b/SeleniumCsharp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ExtentReports" Version="4.1.0" />
+    <PackageReference Include="MailKit" Version="2.13.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
