Code changes for report.

--- a/appSettings.json
+++ b/appSettings.json
@@ -7,7 +7,10 @@
   "expectederrorMessage": "Username does not exist",
   "validuserName": "Quality.Assurance",
   "validPassword": "admin@123",
-  "loginSuccessMessage": "Welcome, QA Admin"
-  
+  "loginSuccessMessage": "Welcome, QA Admin",
+  "fromRecipient": "Phaneendraphani20@gmail.com",
+  "emailRecipients": "Phaneendraphani20@gmail.com,Phaneendraphani22@yahoo.in"
+ // "emailRecipientTwo": "Phaneendraphani22@yahoo.in"
+
 
 }
